tests/snapshots/blockflow/chain_info/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - blockflow
    - chain-info
    - foo
    - "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'foo' for '<FROM_GROUP>': invalid digit found in string

For more information, try '--help'.
