tests/snapshots/blockflow/chain_info/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - blockflow
    - chain-info
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <FROM_GROUP>
  <TO_GROUP>

Usage: kermit blockflow chain-info <FROM_GROUP> <TO_GROUP>

For more information, try '--help'.
