tests/snapshots/blockflow/chain_info/one_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - blockflow
    - chain-info
    - "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <TO_GROUP>

Usage: kermit blockflow chain-info <FROM_GROUP> <TO_GROUP>

For more information, try '--help'.
