tests/snapshots/blockflow/chain_info/two_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - blockflow
    - chain-info
    - "1"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
{
  "currentHeight": 0
}

----- stderr -----
